[gd_scene load_steps=13 format=3 uid="uid://dko6yxvmm7bsh"]

[ext_resource type="Script" uid="uid://pyieu4wviihx" path="res://menu/win_player.gd" id="1_kyeil"]
[ext_resource type="FontFile" uid="uid://dye8dys757x60" path="res://fonts/PixeloidMono.ttf" id="2_fqieo"]
[ext_resource type="Texture2D" uid="uid://ltjkmhjbro58" path="res://texture/background_menu/cat-scene3.png" id="2_kyeil"]
[ext_resource type="AudioStream" uid="uid://cvswgyh81q3ji" path="res://sound/дзынь.mp3" id="3_kyeil"]
[ext_resource type="Texture2D" uid="uid://d0iublrx5kb5r" path="res://menu/Стрелка0.png" id="4_225cj"]
[ext_resource type="AudioStream" uid="uid://csh85gd8h0oq8" path="res://sound/фоновая веселая музыка.mp3" id="6_vsunv"]

[sub_resource type="Theme" id="Theme_qvlx5"]

[sub_resource type="Theme" id="Theme_bn8tv"]

[sub_resource type="Animation" id="Animation_egpo1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cat-scene0:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(579, 325)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cat-scene0:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("nextB:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../next:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Cat-scene0:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Cat-scene0:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(579, 325)]
}

[sub_resource type="Animation" id="Animation_xxm61"]
resource_name = "end"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cat-scene0:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cat-scene0:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(579, 325), Vector2(-455, 325)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("nextB:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.29),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../next:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.289235),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Cat-scene0:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Cat-scene0:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(579, 325), Vector2(-455, 325)]
}

[sub_resource type="Animation" id="Animation_cuyn3"]
resource_name = "start"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cat-scene0:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1300, 325), Vector2(579, 325)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Cat-scene0:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0333334, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("nextB:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Cat-scene0:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1500, 325), Vector2(579, 325)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../next:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.329473, 0.331798, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Cat-scene0:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_74ih7"]
_data = {
&"RESET": SubResource("Animation_egpo1"),
&"end": SubResource("Animation_xxm61"),
&"start": SubResource("Animation_cuyn3")
}

[node name="WinPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_kyeil")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 1155.0
offset_bottom = 649.0
color = Color(0.0431373, 0.521569, 0.737255, 0.992157)

[node name="Cat-scene0" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(579, 325)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_kyeil")

[node name="nextB" type="Button" parent="."]
physics_interpolation_mode = 0
layout_mode = 0
offset_left = 1048.0
offset_top = 272.0
offset_right = 1450.0
offset_bottom = 762.0
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 8
focus_mode = 0
theme = SubResource("Theme_qvlx5")
theme_type_variation = &"FlatButton"
theme_override_fonts/font = ExtResource("2_fqieo")
theme_override_font_sizes/font_size = 50
icon = ExtResource("4_225cj")

[node name="Sound button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kyeil")
volume_db = -15.0
bus = &"Sound"

[node name="SoundRate" type="Timer" parent="Sound button"]
wait_time = 0.05
one_shot = true

[node name="2" type="Button" parent="."]
unique_name_in_owner = true
physics_interpolation_mode = 0
visible = false
custom_minimum_size = Vector2(6, 5)
layout_mode = 0
offset_left = 554.0
offset_top = 273.0
offset_right = 595.0
offset_bottom = 378.0
size_flags_horizontal = 8
focus_mode = 0
theme = SubResource("Theme_bn8tv")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0, 0, 0, 0.45098)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 11
theme_override_fonts/font = ExtResource("2_fqieo")
theme_override_font_sizes/font_size = 50
text = "2"

[node name="3" type="Button" parent="."]
unique_name_in_owner = true
physics_interpolation_mode = 0
visible = false
layout_mode = 0
offset_left = 690.0
offset_top = 273.0
offset_right = 731.0
offset_bottom = 378.0
size_flags_horizontal = 8
focus_mode = 0
theme = SubResource("Theme_bn8tv")
theme_type_variation = &"FlatButton"
theme_override_colors/font_hover_color = Color(0, 0, 0, 0.513726)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 11
theme_override_fonts/font = ExtResource("2_fqieo")
theme_override_font_sizes/font_size = 50
text = "3"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_vsunv")
volume_db = -15.0
autoplay = true
bus = &"Music"

[node name="AnimationPlayerB" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_74ih7")
}

[connection signal="mouse_entered" from="nextB" to="." method="_on_next_b_mouse_entered"]
[connection signal="mouse_exited" from="nextB" to="." method="_on_next_b_mouse_exited"]
[connection signal="pressed" from="nextB" to="." method="_on_next_b_pressed"]
